# cite-lean

./: Cargo.toml  README.md
.github/workflows/: docs.yml
example/: .gitignore  Justfile
example/lean/: Theory.lean  lake-manifest.json  lakefile.lean
example/lean/Theory/: Basic.lean
example/tex/: lean-macros.tex  main.tex
src/: main.rs
