[package]
name = "cite-lean"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/oeb25/cite-lean"

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
camino = { version = "1.1.9", features = ["serde1"] }
clap = { version = "4.5.18", features = ["derive"] }
color-eyre = "0.6.3"
itertools = "0.14.0"
reqwest = { version = "0.12.7", features = [
    "blocking",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
urlencoding = "2.1.3"
walkdir = "2.5.0"

[workspace.metadata.release]
publish = false
tag-name = "v{{version}}"
shared-version = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
